--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@
   list-style: none;
 }
 
+/*COLOR # */
 html {
   box-sizing: border-box;
   height: 100%;
@@ -90,4 +91,15 @@ button {
 
 *:focus {
   outline: 0;
+}
+
+small {
+  font-size: 0.75rem;
+}
+
+.profil-photo {
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
 }/*# sourceMappingURL=style.css.map */
