yopiladigan qilib ko'rdim

--- a/css/style.scss
+++ b/css/style.scss
@@ -161,7 +161,7 @@ aside{
         }
     }
     .close{
-        display: none;
+        // display: none;
     }
 }
 /*===========SIDEBAT=========*/
