--- a/css/style.scss
+++ b/css/style.scss
@@ -198,7 +198,9 @@ aside{
                 font-size: 1.6rem;
             }
         }
-        
+        .add-product{
+            font-size: 14px;
+        }
     }
     h3{
         font-weight: 500;
