--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ body {
   height: 100vh;
   font-family: "Poppins", sans-serif;
   overflow: hidden;
+  color: #363949;
 }
 
 .container {
@@ -154,6 +155,10 @@ aside .logo img {
   width: 2rem;
   height: 2rem;
 }
+aside .close {
+  display: none;
+}
+
 /*===========SIDEBAT=========*/
 aside .sidebar {
   display: flex;
@@ -226,4 +231,50 @@ aside .sidebar a:hover {
 aside .sidebar a:hover img {
   margin-left: 1rem;
   transition: 0.4s ease;
+}
+
+/*=======MAIN========*/
+main {
+  margin-top: 1.4rem;
+}
+main .date {
+  display: inline-block;
+  background-color: rgba(132, 139, 200, 0.18);
+  border-radius: 0.4rem;
+  margin-top: 1rem;
+  padding: 0.5rem 1.6rem;
+}
+main .date input {
+  background-color: transparent;
+  color: #363949;
+}
+main .insights {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+}
+
+main .insights > div {
+  background: #fff;
+  padding: 1.8rem;
+  margin-top: 1rem;
+  box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+}
+main .insights > div img {
+  background-color: #7380ec;
+  border-radius: 50%;
+  padding: 0.5rem;
+  font-size: 2rem;
+}
+
+main .insights > div:hover {
+  box-shadow: none;
+}
+
+main .insights > div.expenses img {
+  background-color: #ff7782;
+}
+
+main .insights > div.income img {
+  background-color: #41f1b6;
 }/*# sourceMappingURL=style.css.map */
