--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,7 @@ body{
     height: 100vh;
     font-family: "Poppins",sans-serif;
     overflow: hidden;
+    color:$color-dark;
 }
 .container{
     display: grid;
@@ -161,7 +162,7 @@ aside{
         }
     }
     .close{
-        // display: none;
+        display: none;
     }
 }
 /*===========SIDEBAT=========*/
@@ -185,7 +186,7 @@ aside{
             align-items:center;
             color:$color-info-dark;
             margin-left: 2rem;
-            margin-top: 0.5rem;     
+            margin-top: 0.5rem; 
             gap: 1rem;
             position: relative;
             height: 3.7rem;
@@ -232,4 +233,46 @@ aside .sidebar a:hover{
 aside .sidebar a:hover img{
     margin-left: 1rem;
     transition: 0.4s ease;
+}
+/*=======MAIN========*/
+main{
+    margin-top: 1.4rem;
+    .date{
+        display: inline-block;
+        background-color:rgba(132,139,200,0.18);
+        border-radius: 0.4rem;
+        margin-top: 1rem;
+        padding: 0.5rem 1.6rem;
+        input{
+            background-color:transparent;
+            color:$color-dark;
+        }
+    }
+    .insights{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 1.6rem;
+    }
+}
+
+main .insights>div{
+    background: #fff;
+    padding: 1.8rem;
+    margin-top: 1rem;
+    box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+    img{
+        background-color:$color-primary;
+        border-radius:50%;
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+}
+main .insights>div:hover{
+    box-shadow:none;
+}
+main .insights>div.expenses img{
+    background-color:$color-danger;
+}
+main .insights>div.income img{
+    background-color:$color-success;
 }
