--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,11 @@ main .insights > div {
   padding: 1.8rem;
   margin-top: 1rem;
   box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+  border-radius: 1.8rem;
+}
+main .insights > div h3 {
+  margin: 1rem 0 0.6rem;
+  font-size: 1rem;
 }
 main .insights > div img {
   background-color: #7380ec;
@@ -277,4 +282,31 @@ main .insights > div.expenses img {
 
 main .insights > div.income img {
   background-color: #41f1b6;
+}
+
+main .insights > div .middle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main .insights .progress {
+  position: relative;
+  width: 92px;
+  height: 92px;
+}
+
+main svg {
+  width: 7rem;
+  height: 7rem;
+}
+
+main svg circle {
+  fill: none;
+  stroke: #7380ec;
+  stroke-width: 14;
+  stroke-linecap: round;
+  transform: translate(5px, 5px);
+  stroke-dasharray: 110;
+  stroke-dashoffset: 92;
 }/*# sourceMappingURL=style.css.map */
