--- a/css/style.scss
+++ b/css/style.scss
@@ -298,7 +298,6 @@ main .insights .progress{
         width: 100%;
         display: flex;
         justify-content: center;
-        border: 1px solid #000;
         align-items:center;
     }
 }
@@ -322,5 +321,8 @@ main .sales svg circle{
 main .expenses svg circle{
     stroke-dasharray: 80;
     stroke-dashoffset: 20;
-
+}
+main .insights small{
+    margin-top: 1.3rem;
+    display: block;
 }
