--- a/css/style.scss
+++ b/css/style.scss
@@ -364,3 +364,39 @@ main .recent-order table:hover {
     border:none;
     background:none;
 }
+/*------RIGHT--------*/
+.right{
+    margin-top: 1.4rem;
+    .top{
+        display: flex;
+        justify-content: end;
+        gap: 2rem;
+        button{
+            display: none;
+        }
+    }
+    .theme-togler{
+        background:lightslategrey;
+        display: flex;
+        justify-content:space-between;
+        align-items:center;
+        height: 1.6rem;
+        width: 4.2rem;
+        cursor: pointer;
+        border-radius:20%;
+        img{
+            width: 30%;
+            height: 100%;
+            object-fit: cover;
+            display: flex;
+            align-items:center;
+            justify-content: center;
+        }
+    }
+}
+.admin{
+    border-radius:50%;
+    object-fit: cover;
+    width: 40px;
+    height: 40px;
+}
