--- a/css/style.scss
+++ b/css/style.scss
@@ -374,6 +374,11 @@ main .recent-order table:hover {
         button{
             display: none;
         }
+        .profile{
+            display: flex;
+            gap: 2rem;
+            text-align: right;
+        }
     }
     .theme-togler{
         background:lightslategrey;
@@ -394,9 +399,38 @@ main .recent-order table:hover {
         }
     }
 }
+.theme-togler img.active{
+    border-radius:2rem
+
+}
 .admin{
     border-radius:50%;
     object-fit: cover;
     width: 40px;
     height: 40px;
+}
+/*===resent-updates===*/
+.right{
+    .resent-updates{
+        margin-top: 1rem;
+        h2{
+            margin-bottom: 0.8rem;
+        }
+    }
+}
+.updates{
+    border-radius:2rem;
+    padding: 1.8rem;
+    background:#fff;
+    box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+    transition: all 300ms ease;
+    .update{
+        display: grid;
+        grid-template-columns: 2.6rem auto;
+        gap: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+.updates:hover{
+    box-shadow:none;
 }
