--- a/css/style.css
+++ b/css/style.css
@@ -447,4 +447,64 @@ main .recent-order table:hover {
 
 .updates:hover {
   box-shadow: none;
+}
+
+/*====SALES ANALYTCS=======*/
+.right .sales-analytics {
+  margin-top: 2rem;
+}
+.right .sales-analytics h2 {
+  margin-bottom: 0.8rem;
+}
+.right .sales-analytics .item {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 0.7rem;
+  padding: 1.4rem 1.8rem;
+  border-radius: 2rem;
+  box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+  transition: all 300ms ease;
+}
+.right .sales-analytics .item .right {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin: 0;
+  width: 100%;
+}
+.right .sales-analytics .item .icon {
+  padding: 0.6rem;
+  color: #fff;
+  border-radius: 50%;
+  background-color: #7380ec;
+  display: flex;
+}
+.right .sales-analytics .offline .icon {
+  background-color: #ff7782;
+}
+.right .sales-analytics .customers .icon {
+  background-color: #41f1b6;
+}
+.right .sales-analytics .add-product {
+  background-color: transparent;
+  border: 2px dashed #7380ec;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.right .sales-analytics .add-product div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.6rem;
+}
+
+.right .sales-analytics .item:hover {
+  box-shadow: none;
+}
+
+.add-product div h3 {
+  font-weight: 600;
 }/*# sourceMappingURL=style.css.map */
