--- a/css/style.scss
+++ b/css/style.scss
@@ -434,3 +434,69 @@ main .recent-order table:hover {
 .updates:hover{
     box-shadow:none;
 }
+/*====SALES ANALYTCS=======*/
+.right .sales-analytics{
+    margin-top: 2rem;
+    h2{
+        margin-bottom: 0.8rem;
+    }
+    .item{
+        background-color:#fff;
+        display: flex;
+        align-items:center;
+        gap: 1rem;
+        margin-bottom: 0.7rem;
+        padding: 1.4rem 1.8rem;
+        border-radius:2rem;
+        box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+        transition: all 300ms ease;
+        .right{
+            display: flex;
+            justify-content: space-between;
+            align-items: start;
+            margin: 0;
+            width: 100%;
+  
+        }
+        .icon{
+            padding: 0.6rem;
+            color:#fff;
+            border-radius:50%;
+            background-color:$color-primary;
+            display: flex;
+        }
+    }
+    .offline {
+        .icon{
+            background-color: $color-danger;
+        } 
+    }
+    .customers{
+       .icon{
+        background-color: $color-success;
+       }
+    }
+    .add-product{
+        background-color:transparent; 
+        border:2px dashed $color-primary;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        div{
+            display: flex;
+            align-items:center;
+            justify-content: space-between;
+            gap: 0.6rem;
+        }
+    }
+}
+.right .sales-analytics .item:hover{
+    box-shadow:none;
+}
+.add-product{
+    div{
+        h3{
+            font-weight: 600;
+        }
+    }
+}
