--- a/css/style.css
+++ b/css/style.css
@@ -507,4 +507,48 @@ main .recent-order table:hover {
 
 .add-product div h3 {
   font-weight: 600;
+}
+
+/*=========MEDIA QUERIES========*/
+@media (max-width: 1200px) {
+  .conrainer {
+    width: 94%;
+    grid-template-columns: 7rem auto 23rem;
+  }
+  aside .logo h2 {
+    display: none;
+  }
+  aside .sidebar h3 {
+    display: none;
+  }
+  aside .sidebar a {
+    width: 5.6rem;
+  }
+  aside .sidebar a:last-child {
+    position: relative;
+    margin-top: 1.8rem;
+  }
+  main .insights {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+  main .recent-order {
+    width: 94%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 2rem 0 0 8.8rem;
+  }
+  main .recent-order table {
+    width: 83% vw;
+    background-color: darkred;
+  }
+  main table thead tr th:last-child,
+main table thead tr th:first-child {
+    display: none;
+  }
+  main table tbody tr th:last-child,
+main table tbody tr th:first-child {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
