--- a/css/style.css
+++ b/css/style.css
@@ -515,9 +515,6 @@ main .recent-order table:hover {
     width: 94%;
     grid-template-columns: 7rem auto 23rem;
   }
-  aside .logo h2 {
-    display: none;
-  }
   aside .sidebar h3 {
     display: none;
   }
@@ -550,5 +547,29 @@ main table thead tr th:first-child {
   main table tbody tr th:last-child,
 main table tbody tr th:first-child {
     display: none;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+  aside {
+    position: fixed;
+    width: 18rem;
+    box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+    z-index: 3;
+    height: 100vh;
+    padding: 1.8rem;
+    left: 0;
+  }
+  aside .logo {
+    margin-left: 1rem;
+  }
+  aside .logo h2 {
+    display: inline;
+  }
+  aside .close {
+    display: inline-block;
+    cursor: pointer;
   }
 }/*# sourceMappingURL=style.css.map */
