--- a/css/style.scss
+++ b/css/style.scss
@@ -508,11 +508,6 @@ main .recent-order table:hover {
         grid-template-columns:7rem auto 23rem ;
     }
     aside{
-        .logo{
-            h2{
-                display: none;
-            }
-        }
         .sidebar{
             h3{
                 display: none;
@@ -550,5 +545,29 @@ main .recent-order table:hover {
     main table tbody tr th:last-child,
     main table tbody tr th:first-child{
         display: none;
+    }
+}
+@media(max-width:768px) {
+    .container{
+        width: 100%;
+    }
+    aside{
+        position: fixed;
+        width: 18rem;
+        box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+        z-index: 3;
+        height: 100vh;
+        padding: 1.8rem;
+        left: 0;
+        .logo{
+            margin-left: 1rem;
+            h2{
+                display: inline;
+            }
+        }
+        .close{
+            display: inline-block;
+            cursor: pointer;
+        }
     }
 }
