body dan overflow hiddenni oldim

--- a/css/style.scss
+++ b/css/style.scss
@@ -92,7 +92,7 @@ body{
     width: 100vw;
     height: 100vh;
     font-family: "Poppins",sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
     color:$color-dark;
 }
 .container{
