--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,6 @@ main .recent-order table:hover {
   }
   main .recent-order table {
     width: 83% vw;
-    background-color: darkred;
   }
   main table thead tr th:last-child,
 main table thead tr th:first-child {
@@ -551,6 +550,7 @@ main table tbody tr th:first-child {
 @media (max-width: 768px) {
   .container {
     width: 100%;
+    grid-template-columns: 1fr;
   }
   aside {
     position: fixed;
@@ -560,6 +560,7 @@ main table tbody tr th:first-child {
     height: 100vh;
     padding: 1.8rem;
     left: 0;
+    display: none;
   }
   aside .logo {
     margin-left: 1rem;
@@ -570,5 +571,50 @@ main table tbody tr th:first-child {
   aside .close {
     display: inline-block;
     cursor: pointer;
+  }
+  main {
+    margin-top: 8rem;
+    padding: 0 1rem;
+  }
+  main .recent-order {
+    position: relative;
+    margin: 3rem 0 0 0;
+    width: 100%;
+  }
+  main .recent-order table {
+    width: 100%;
+    margin: 0;
+  }
+  .right {
+    width: 94%;
+    margin: 0 auto 4rem;
+  }
+  .right .top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    padding: 0 0.8rem;
+    height: 4.6rem;
+    background-color: #fff;
+    width: 100%;
+    margin: 0;
+    z-index: 2;
+    box-shadow: 0.1rem 0.1rem #dce1eb;
+  }
+  .right .top .theme-togler {
+    width: 4.4rem;
+    position: absolute;
+    left: 66%;
+  }
+  .right .top button {
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    position: absolute;
+    left: 1rem;
+  }
+  .right .profile .info {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
