--- a/css/style.scss
+++ b/css/style.scss
@@ -325,7 +325,6 @@ main .insights small{
     margin-top: 1.3rem;
     display: block;
 }
-
 /*-----------RECENT ORDERS--------*/
 main .recent-order{
     margin-top: 2rem;
@@ -500,7 +499,6 @@ main .recent-order table:hover {
         }
     }
 }
-
 /*=========MEDIA QUERIES========*/
 @media(max-width:1200px) {
     .conrainer{
@@ -534,7 +532,6 @@ main .recent-order table:hover {
             margin: 2rem 0 0 8.8rem;
             table{
                 width: 83%vw;
-                background-color:darkred;
             }
         }
     }
@@ -550,6 +547,7 @@ main .recent-order table:hover {
 @media(max-width:768px) {
     .container{
         width: 100%;
+        grid-template-columns: 1fr;
     }
     aside{
         position: fixed;
@@ -559,6 +557,7 @@ main .recent-order table:hover {
         height: 100vh;
         padding: 1.8rem;
         left: 0;
+        display: none;
         .logo{
             margin-left: 1rem;
             h2{
@@ -568,6 +567,54 @@ main .recent-order table:hover {
         .close{
             display: inline-block;
             cursor: pointer;
+        }
+    }
+    main{
+        margin-top: 8rem;
+        padding: 0 1rem;
+        .recent-order{
+            position: relative;
+            margin: 3rem 0 0 0;
+            width: 100%;
+            table{
+                width: 100%;
+                margin: 0;
+            }
+        }
+    }
+    .right{
+        width: 94%;
+        margin: 0 auto 4rem;
+        .top{
+            position: fixed;
+            top: 0;
+            left: 0;
+            align-items:center;
+            padding: 0 0.8rem;
+            height: 4.6rem;
+            background-color:#fff;
+            width: 100%; 
+            margin: 0;
+            z-index: 2;
+            box-shadow:0.1rem 0.1rem $color-info-light; 
+            .theme-togler{
+                width: 4.4rem;
+                position: absolute;
+                left: 66%;
+
+            }
+            button{
+                display: inline-block;
+                background:transparent;
+                cursor: pointer;
+                position: absolute;
+                left: 1rem;
+            }
+        }
+        .profile{
+            .info{
+                display: none;
+            }
         }
     }
 }
