--- a/css/style.scss
+++ b/css/style.scss
@@ -85,6 +85,13 @@ $color-primary-variant:#111e88;
 /*==DARK THEME VARIABLES*/
 .dark-theme-variables{
     background-color:#181a1e;
+    $color-dark:#edeffd;
+    color:#f50e0e;
+    $color-dark-variant:#a3bdcc;
+    $color-light:rgba(0, 0, 0 ,0.4);
+    box-shadow: -1px 12px 20px 3px rgba(119, 138, 144, 0.28);
+    $color-white:#202528;
+
 }
 html {
     box-sizing: border-box;
